--- a/public/css/app.css
+++ b/public/css/app.css
@@ -140,3 +140,18 @@
 .navbar-brand {
     padding: 5px 15px;
 }
+
+.nav-title {
+    color: #fff;
+    padding: 10px 10px 10px 12px;
+    font-size: 20px;
+}
+
+.brand-text {
+    color: #fff !important;
+    padding: 20px 10px 10px 12px !important;
+}
+.active{
+    color: #fff;
+    background-color: #1a242f; 
+}
